tracer/test/Datadog.Trace.DuckTyping.Tests/Errors/ReverseProxy/ProxiesDefinitions/IMessageTemplate.cs
// <copyright file="IMessageTemplate.cs" company="Datadog">
// Unless explicitly stated otherwise all files in this repository are licensed under the Apache 2 License.
// This product includes software developed at Datadog (https://www.datadoghq.com/). Copyright 2017 Datadog, Inc.
// </copyright>

namespace Datadog.Trace.DuckTyping.Tests.Errors.ReverseProxy.ProxiesDefinitions
{
    public interface IMessageTemplate
    {
        public string Text { get; }
    }
}
